# echo2garmin

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  fwrite.txt
src/: main.rs
