[package]
name = "echo2garmin"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
bindgen = "0.69.4"

[dependencies]
btleplug = "0.11.6"
byteorder = "1.5.0"
chrono = "0.4.39"
futures = "0.3.31"
lazy_static = "1.5.0"
libc = "0.2.169"
tokio = { version = "1.42.0", features = ["full"] }
uuid = "1.11.0"
